# minecraft-questboook-format-checker

./: main.py  pyproject.toml
sample-input/: file1.txt  file2.txt
