[project]
name = "minecraft-questboook-format-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.5",
    "rich>=14.0.0",
    "streamlit>=1.45.1",
    "typer>=0.16.0",
]

[tool.uv.workspace]
members = ["venv"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "ruff>=0.11.12",
]
